# anitable-rs

./: .drone.yml  .travis.yml  Cargo.toml  README.md
anitable/: Cargo.toml
anitable-tui/: Cargo.toml
anitable-tui/src/app/: app.rs
anitable/src/: anitable.rs  lib.rs
anitable/tests/: lib.rs
src/: anitable.rs  format.rs  lib.rs
src/types/: mod.rs
src/v1/: anitable.rs  mod.rs
src/v2/: anitable.rs  format.rs
tests/: lib.rs
