[package]
name = "anitable-rs"
version = "0.1.0"
authors = ["Jisu Kim <vbalien@live.jp>"]
edition = "2018"

[lib]
name = "anitable"
path = "src/lib.rs"

[[bin]]
name = "anitable"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "=0.2.0-alpha.6"
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tui = "0.7"
termion = "1.5"
failure = "0.1"

[dev-dependencies]
mockito = "0.22"

[[test]]
name = "test"
path = "tests/lib.rs"
