[package]
name = "anitable"
version = "0.2.0"
authors = ["Jisu Kim <webmaster@alien.moe>"]
edition = "2018"
doc = true
description = """
rust 애니시아 애니편성표 API
"""
keywords = ["anissia", "anime", "애니시아", "애니편성표", "애니"]
documentation = "https://docs.rs/anitable"
repository = "https://github.com/vbalien/anitable-rs"
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "vbalien/anitable-rs", branch = "master" }

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
num_enum = "0.5.1"
chrono = "0.4"

[dev-dependencies]
tokio = "1"
mockito = "0.29"

[[test]]
name = "test"
path = "tests/lib.rs"
doc = false
