[package]
name = "anitable"
version = "0.1.0"
authors = ["Jisu Kim <vbalien@live.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
num_enum = "0.4.2"
chrono = "0.4"

[dev-dependencies]
tokio = "=0.2.0-alpha.6"
mockito = "0.22"

[[test]]
name = "test"
path = "tests/lib.rs"
